Scenario B: Exclude bad code to test clean code path - Hadoop should run

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,8 @@ sonar.sources=.
 sonar.inclusions=**/*.py
 
 # File patterns to exclude
-sonar.exclusions=**/tests/**,**/venv/**,**/__pycache__/**,**/env/**
+# Temporarily excluding bad code directories for Scenario B (clean code test)
+sonar.exclusions=**/tests/**,**/venv/**,**/__pycache__/**,**/env/**,**/python/**,**/django/**,**/flask/**,**/obfuscation/**
 
 # Python specific settings
 sonar.python.version=3.8,3.9,3.10,3.11
