--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,8 +13,8 @@ sonar.sources=.
 sonar.inclusions=**/*.py
 
 # File patterns to exclude
-# Temporarily excluding bad code directories for Scenario B (clean code test)
-sonar.exclusions=**/tests/**,**/venv/**,**/__pycache__/**,**/env/**,**/python/**,**/django/**,**/flask/**,**/obfuscation/**
+# Scenario A: Include all code (including problematic code with blocker issues)
+sonar.exclusions=**/tests/**,**/venv/**,**/__pycache__/**,**/env/**
 
 # Python specific settings
 sonar.python.version=3.8,3.9,3.10,3.11
